--- a/.github/workflows/maven-smoke-test.yml
+++ b/.github/workflows/maven-smoke-test.yml
@@ -3,11 +3,40 @@ name: Maven smoke test
 on: [push]
 
 jobs:
+    verify-enterprise-sample:
+        runs-on: ubuntu-latest
+        env:
+            LOG_CCUD_EXTENSION_LOADED: "Build operation 'Gradle Enterprise mojo execution' completed"
+            LOG_CCUD_EXECUTION_FAILURE: "Error executing a GradleEnterpriseListener callback"
+            # set GITHUB_TOKEN to avoid maven security error
+            GITHUB_TOKEN: "foo"
+
+        steps:
+            - uses: actions/checkout@v2
+            - name: Set up JDK 11
+              uses: actions/setup-java@v2
+              with:
+                  java-version: '11'
+                  distribution: 'adopt'
+            - name: Run Maven build using CCUD extension
+              run: |
+                  echo 'MAVEN_OUTPUT<<EOF' >> $GITHUB_ENV
+                  mvn -f common-gradle-enterprise-maven-configuration/pom.xml -X --batch-mode clean validate -Dgradle.cache.remote.enabled=false -Dgradle.scan.disabled=true >> $GITHUB_ENV
+                  echo 'EOF' >> $GITHUB_ENV
+            - name: Validate extension load
+              run: |
+                  echo $MAVEN_OUTPUT | grep "$LOG_CCUD_EXTENSION_LOADED"
+            - name: Validate extension execution
+              run: |
+                  echo $MAVEN_OUTPUT | grep -L "$LOG_CCUD_EXECUTION_FAILURE"
+
     verify-maven-samples:
         runs-on: ubuntu-latest
         env:
             LOG_CCUD_EXTENSION_LOADED: "Build operation 'Gradle Enterprise mojo execution' completed"
             LOG_CCUD_EXECUTION_FAILURE: "Error executing a GradleEnterpriseListener callback"
+            # set GITHUB_TOKEN to avoid maven security error
+            GITHUB_TOKEN: "foo"
 
         strategy:
             matrix:
@@ -26,7 +55,12 @@ jobs:
                   distribution: 'adopt'
             - name: Install current version
               run: |
-                  mvn -f common-custom-user-data-maven-extension/pom.xml install
+                  mvn -f common-custom-user-data-maven-extension/pom.xml install -Dgradle.scan.disabled=true
+            - name: Use current version in extension
+              run: |
+                  sudo apt-get install -y xmlstarlet
+                  CURRENT_VERSION=$(mvn -f common-custom-user-data-maven-extension/pom.xml -Dexec.executable='echo' -Dexec.args='${project.version}' -Dgradle.scan.disabled=true --non-recursive exec:exec -q)
+                  xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_VERSION  common-custom-user-data-maven-extension/.mvn/extensions.xml
             - name: Copy current sample
               run: |
                   # default uses the original gradle-enterprise-custom-user-data.groovy
@@ -36,7 +70,7 @@ jobs:
             - name: Run Maven build using CCUD extension
               run: |
                   echo 'MAVEN_OUTPUT<<EOF' >> $GITHUB_ENV
-                  mvn -f common-custom-user-data-maven-extension/pom.xml -X --batch-mode clean validate >> $GITHUB_ENV
+                  mvn -f common-custom-user-data-maven-extension/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
                   echo 'EOF' >> $GITHUB_ENV
             - name: Validate extension load
               run: |
