--- a/.github/workflows/shellcheck.yaml
+++ b/.github/workflows/shellcheck.yaml
@@ -10,8 +10,9 @@ jobs:
     name: Shellcheck
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Run shell checks 
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Run shell checks
       uses: luizm/action-sh-checker@v0.1.12
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
