--- a/.github/workflows/maven-smoke-test.yml
+++ b/.github/workflows/maven-smoke-test.yml
@@ -1,61 +1,28 @@
-name: Maven smoke test
+name: Maven extension smoke test
 
 on: [push]
 
 jobs:
-    verify-enterprise-sample:
-        runs-on: ubuntu-latest
-        env:
-            LOG_CCUD_EXTENSION_LOADED: "Build operation 'Gradle Enterprise mojo execution' completed"
-            LOG_CCUD_EXECUTION_FAILURE: "Error executing a GradleEnterpriseListener callback"
-            # set GITHUB_TOKEN to avoid Maven security error
-            GITHUB_TOKEN: "foo"
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Set up JDK 11
-              uses: actions/setup-java@v2
-              with:
-                  java-version: '11'
-                  distribution: 'adopt'
-            - name: Install current version of CCUD Maven extension
-              run: |
-                  mvn -f common-custom-user-data-maven-extension/pom.xml install -Dgradle.scan.disabled=true
-            - name: Use current version of CCUD Maven extension in extension
-              run: |
-                  sudo apt-get install -y xmlstarlet
-                  # fetching current project version
-                  CURRENT_VERSION=$(mvn -f common-custom-user-data-maven-extension/pom.xml -Dexec.executable='echo' -Dexec.args='${project.version}' -Dgradle.scan.disabled=true exec:exec -q)
-                  # inplace replacement of the snippet version (latest release) with current version (snapshot)
-                  xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_VERSION  common-gradle-enterprise-maven-configuration/.mvn/extensions.xml
-            - name: Run Maven build using CCUD extension
-              run: |
-                  echo 'MAVEN_OUTPUT<<EOF' >> $GITHUB_ENV
-                  mvn -f common-gradle-enterprise-maven-configuration/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
-                  echo 'EOF' >> $GITHUB_ENV
-            - name: Validate extension loaded
-              run: |
-                  echo $MAVEN_OUTPUT | grep "$LOG_CCUD_EXTENSION_LOADED"
-            - name: Validate extension executed
-              run: |
-                  echo $MAVEN_OUTPUT | grep -L "$LOG_CCUD_EXECUTION_FAILURE"
 
     verify-maven-samples:
         runs-on: ubuntu-latest
         env:
-            LOG_CCUD_EXTENSION_LOADED: "Build operation 'Gradle Enterprise mojo execution' completed"
-            LOG_CCUD_EXECUTION_FAILURE: "Error executing a GradleEnterpriseListener callback"
-            # set GITHUB_TOKEN to avoid maven security error
-            GITHUB_TOKEN: "foo"
+            LOG_MSG_EXTENSION_LOADED: "Build operation 'Gradle Enterprise mojo execution' completed"
+            LOG_MSG_EXECUTION_FAILED: "Error executing a GradleEnterpriseListener callback"
 
         strategy:
             matrix:
                 include:
-                    - relative-path-to-sample-build-file: "default"
-                    - relative-path-to-sample-build-file: "capture-os-processes/maven-os-processes.groovy"
-                    - relative-path-to-sample-build-file: "capture-quality-check-issues/maven-quality-check-issues.groovy"
-                    - relative-path-to-sample-build-file: "capture-top-level-project/maven-top-level-project.groovy"
+                    - project-basedir: common-gradle-enterprise-maven-configuration
+                      relative-path-to-sample-build-file: "default"
+                    - project-basedir: common-custom-user-data-maven-extension
+                      relative-path-to-sample-build-file: "default"
+                    - project-basedir: common-custom-user-data-maven-extension
+                      relative-path-to-sample-build-file: "capture-os-processes/maven-os-processes.groovy"
+                    - project-basedir: common-custom-user-data-maven-extension
+                      relative-path-to-sample-build-file: "capture-quality-check-issues/maven-quality-check-issues.groovy"
+                    - project-basedir: common-custom-user-data-maven-extension
+                      relative-path-to-sample-build-file: "capture-top-level-project/maven-top-level-project.groovy"
 
         steps:
             - name: Checkout
@@ -74,23 +41,23 @@ jobs:
                   # fetching current project version
                   CURRENT_VERSION=$(mvn -f common-custom-user-data-maven-extension/pom.xml -Dexec.executable='echo' -Dexec.args='${project.version}' -Dgradle.scan.disabled=true exec:exec -q)
                   # inplace replacement of the snippet version (latest release) with current version (snapshot)
-                  xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_VERSION  common-custom-user-data-maven-extension/.mvn/extensions.xml
+                  xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_VERSION  ${{ matrix.project-basedir }}/.mvn/extensions.xml
             - name: Copy current sample
               run: |
                   # default uses the original gradle-enterprise-custom-user-data.groovy
                   if [[ ${{ matrix.relative-path-to-sample-build-file }} != "default" ]]; then
-                      cp ${{ matrix.relative-path-to-sample-build-file }} common-custom-user-data-maven-extension/.mvn/gradle-enterprise-custom-user-data.groovy
+                      cp ${{ matrix.relative-path-to-sample-build-file }} ${{ matrix.project-basedir }}/.mvn/gradle-enterprise-custom-user-data.groovy
                   fi
             - name: Run Maven build using CCUD extension
               run: |
                   echo 'MAVEN_OUTPUT<<EOF' >> $GITHUB_ENV
-                  mvn -f common-custom-user-data-maven-extension/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
+                  mvn -f ${{ matrix.project-basedir }}/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
                   echo 'EOF' >> $GITHUB_ENV
             - name: Validate extension loaded
               run: |
                   # Asserting that extension was loaded checking a log entry
-                  echo $MAVEN_OUTPUT | grep "$LOG_CCUD_EXTENSION_LOADED"
+                  echo $MAVEN_OUTPUT | grep "$LOG_MSG_EXTENSION_LOADED"
             - name: Validate extension executed
               run: |
                   # Asserting that extension was run successfully checking absence of an error log entry
-                  echo $MAVEN_OUTPUT | grep -L "$LOG_CCUD_EXECUTION_FAILURE"
+                  echo $MAVEN_OUTPUT | grep -L "$LOG_MSG_EXECUTION_FAILED"
