Build CCUD Gradle plugin with Java 8
Use the 'java.toolchain' feature of Gradle to always build the plugin
with a Java 1.8 JDK.

This allows us to run the build with newer JDK versions, and will
make it easier to catch inadvertant use of newer JDK features/APIs.

Fixes #194

--- a/common-custom-user-data-gradle-plugin/build.gradle
+++ b/common-custom-user-data-gradle-plugin/build.gradle
@@ -17,6 +17,12 @@ dependencies {
     compileOnly 'com.gradle:gradle-enterprise-gradle-plugin:3.7.1'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+}
+
 gradlePlugin {
     plugins {
         commonCustomUserData {
