--- a/.github/workflows/release-build-validation-scripts.yml
+++ b/.github/workflows/release-build-validation-scripts.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - jhurne/experiment-automation
+    paths:
+      - 'build-validation/**'
   workflow_dispatch:
 
 jobs:
