--- a/.github/workflows/shellcheck.yaml
+++ b/.github/workflows/shellcheck.yaml
@@ -19,6 +19,6 @@ jobs:
         SHELLCHECK_OPTS: -a -x
       with:
         sh_checker_comment: true
-        sh_checker_exclude: "gradlew mvnw build-validation"
+        sh_checker_exclude: "gradlew mvnw build-validation-scripts"
         sh_checker_shfmt_disable: true
 
