--- a/.github/workflows/build-validation-scripts-release.yml
+++ b/.github/workflows/build-validation-scripts-release.yml
@@ -12,15 +12,14 @@ jobs:
   prerelease:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: jhurne/experiment-automation
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-      -  name: Build with Gradle
+      - name: Build with Gradle
          uses: gradle/gradle-build-action@v2
          with:
            arguments: build
