Add "common-gradle-enterprise-gradle-configuration" to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,3 +24,9 @@ updates:
       - gradle-plugin-portal
     schedule:
       interval: "daily"
+  - package-ecosystem: "gradle"
+    directory: "common-gradle-enterprise-gradle-configuration"
+    registries:
+      - gradle-plugin-portal
+    schedule:
+      interval: "daily"
