--- a/.github/workflows/maven-smoke-test.yml
+++ b/.github/workflows/maven-smoke-test.yml
@@ -13,17 +13,17 @@ jobs:
         strategy:
             matrix:
                 include:
-                    - project-dir: "common-gradle-enterprise-maven-configuration"
+                    - build-dir: "common-gradle-enterprise-maven-configuration"
                       sample-file: "default"
-                    - project-dir: "common-custom-user-data-maven-extension"
+                    - build-dir: "common-custom-user-data-maven-extension"
                       sample-file: "default"
-                    - project-dir: "common-custom-user-data-maven-extension"
+                    - build-dir: "common-custom-user-data-maven-extension"
                       sample-file: "build-data-capturing-maven-samples/capture-os-processes/maven-os-processes.groovy"
-                    - project-dir: "common-custom-user-data-maven-extension"
+                    - build-dir: "common-custom-user-data-maven-extension"
                       sample-file: "build-data-capturing-maven-samples/capture-quality-check-issues/maven-quality-check-issues.groovy"
-                    - project-dir: "common-custom-user-data-maven-extension"
+                    - build-dir: "common-custom-user-data-maven-extension"
                       sample-file: "build-data-capturing-maven-samples/capture-top-level-project/maven-top-level-project.groovy"
-                    - project-dir: "common-custom-user-data-maven-extension"
+                    - build-dir: "common-custom-user-data-maven-extension"
                       sample-file: "build-data-capturing-maven-samples/capture-profiles/maven-profiles.groovy"
 
         steps:
@@ -34,26 +34,26 @@ jobs:
               with:
                   java-version: '11'
                   distribution: 'adopt'
-            - name: Build current snapshot of CCUD Maven extension
+            - name: Publish current snapshot of CCUD Maven extension to Maven local repository
               run: |
                   mvn -f common-custom-user-data-maven-extension/pom.xml install -Dgradle.scan.disabled=true
             - name: Replace version in build configuration
               run: |
                   sudo apt-get install -y xmlstarlet
-                  # fetching current project version
-                  CURRENT_VERSION=$(mvn -f common-custom-user-data-maven-extension/pom.xml -Dexec.executable='echo' -Dexec.args='${project.version}' -Dgradle.scan.disabled=true exec:exec -q)
-                  # inplace replacement of the snippet version (latest release) with current version (snapshot)
-                  xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_VERSION  ${{ matrix.project-dir }}/.mvn/extensions.xml
+                  # fetching current snapshot version
+                  CURRENT_SNAPSHOT_VERSION=$(mvn -f common-custom-user-data-maven-extension/pom.xml -Dexec.executable='echo' -Dexec.args='${project.version}' -Dgradle.scan.disabled=true exec:exec -q)
+                  # inplace replacement to use snapshot version
+                  xmlstarlet edit --inplace --update "//extensions/extension[artifactId='common-custom-user-data-maven-extension']/version" --value $CURRENT_SNAPSHOT_VERSION  ${{ matrix.build-dir }}/.mvn/extensions.xml
             - name: Prepare build directory
               run: |
                   # default uses the original gradle-enterprise-custom-user-data.groovy
                   if [[ ${{ matrix.sample-file }} != "default" ]]; then
-                      cp ${{ matrix.sample-file }} ${{ matrix.project-dir }}/.mvn/gradle-enterprise-custom-user-data.groovy
+                      cp ${{ matrix.sample-file }} ${{ matrix.build-dir }}/.mvn/gradle-enterprise-custom-user-data.groovy
                   fi
             - name: Run Maven build
               run: |
                   echo 'MAVEN_OUTPUT<<EOF' >> $GITHUB_ENV
-                  mvn -f ${{ matrix.project-dir }}/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
+                  mvn -f ${{ matrix.build-dir }}/pom.xml -X --batch-mode clean validate -Dgradle.scan.disabled=true >> $GITHUB_ENV
                   echo 'EOF' >> $GITHUB_ENV
             - name: Validate extension loaded
               run: |
