--- a/.github/workflows/shell-script-validation.yml
+++ b/.github/workflows/shell-script-validation.yml
@@ -3,8 +3,8 @@ name: Validate Shell Scripts
 on: [ push, pull_request, workflow_dispatch ]
 
 jobs:
-  shellcheck:
-    name: Shellcheck
+  validation:
+    name: Validation
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
