Rename and polish

--- a/.github/workflows/gradle-smoke-test.yml
+++ b/.github/workflows/gradle-smoke-test.yml
@@ -1,47 +1,45 @@
-name: Gradle smoke test
+name: Verify Gradle Data Capturing Samples
 
-on: [push]
+on: [ push, pull_request, workflow_dispatch ]
 
 jobs:
-
-    verify-gradle-samples:
-        runs-on: ubuntu-latest
-
-        strategy:
-            matrix:
-                include:
-                    - build-dir: "common-gradle-enterprise-gradle-configuration"
-                      sample-file: "../build-data-capturing-gradle-samples/capture-dependency-resolution/gradle-dependency-resolution.gradle"
-                    - build-dir: "common-gradle-enterprise-gradle-configuration"
-                      sample-file: "../build-data-capturing-gradle-samples/capture-git-diffs/gradle-git-diffs.gradle"
-                    - build-dir: "common-gradle-enterprise-gradle-configuration"
-                      sample-file: "../build-data-capturing-gradle-samples/capture-os-processes/gradle-os-processes.gradle"
-                    - build-dir: "common-gradle-enterprise-gradle-configuration"
-                      sample-file: "../build-data-capturing-gradle-samples/capture-quality-check-issues/gradle-quality-check-issues.gradle"
-                    - build-dir: "common-gradle-enterprise-gradle-configuration"
-                      sample-file: "../build-data-capturing-gradle-samples/capture-slow-workunit-executions/gradle-slow-task-executions.gradle"
-                    - build-dir: "common-gradle-enterprise-gradle-configuration"
-                      sample-file: "../build-data-capturing-gradle-samples/capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle"
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-            - name: Set up JDK 11
-              uses: actions/setup-java@v2
-              with:
-                  java-version: '11'
-                  distribution: 'adopt'
-            - name: Prepare build directory
-              run: |
-                # include CCUD plugin
-                echo -e "pluginManagement {\n
-                            includeBuild \"../common-custom-user-data-gradle-plugin\"\n
-                         }\n
-                         $(cat ${{matrix.build-dir}}/settings.gradle)" > ${{matrix.build-dir}}/settings.gradle
-                # apply sample file
-                echo "apply from: file(\"${{matrix.sample-file}}\")" >> ${{matrix.build-dir}}/build.gradle
-            - name: Run Gradle build
-              uses: gradle/gradle-build-action@v2
-              with:
-                  arguments: tasks
-                  build-root-directory: ${{matrix.build-dir}}
+  verification:
+    name: Verification
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - build-dir: 'common-gradle-enterprise-gradle-configuration'
+            sample-file: '../build-data-capturing-gradle-samples/capture-dependency-resolution/gradle-dependency-resolution.gradle'
+          - build-dir: 'common-gradle-enterprise-gradle-configuration'
+            sample-file: '../build-data-capturing-gradle-samples/capture-git-diffs/gradle-git-diffs.gradle'
+          - build-dir: 'common-gradle-enterprise-gradle-configuration'
+            sample-file: '../build-data-capturing-gradle-samples/capture-os-processes/gradle-os-processes.gradle'
+          - build-dir: 'common-gradle-enterprise-gradle-configuration'
+            sample-file: '../build-data-capturing-gradle-samples/capture-quality-check-issues/gradle-quality-check-issues.gradle'
+          - build-dir: 'common-gradle-enterprise-gradle-configuration'
+            sample-file: '../build-data-capturing-gradle-samples/capture-slow-workunit-executions/gradle-slow-task-executions.gradle'
+          - build-dir: 'common-gradle-enterprise-gradle-configuration'
+            sample-file: '../build-data-capturing-gradle-samples/capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+            java-version: '11'
+            distribution: 'adopt'
+      - name: Prepare build directory
+        run: |
+          # include CCUD plugin
+          echo -e "pluginManagement {\n
+                      includeBuild \"../common-custom-user-data-gradle-plugin\"\n
+                   }\n
+                   $(cat ${{matrix.build-dir}}/settings.gradle)" > ${{matrix.build-dir}}/settings.gradle
+          # apply sample file
+          echo "apply from: file(\"${{matrix.sample-file}}\")" >> ${{matrix.build-dir}}/build.gradle
+      - name: Run Gradle build
+        uses: gradle/gradle-build-action@v2
+        with:
+            arguments: tasks
+            build-root-directory: ${{matrix.build-dir}}
