Get rid of duplication from matrix.build-dir

--- a/.github/workflows/gradle-smoke-test.yml
+++ b/.github/workflows/gradle-smoke-test.yml
@@ -9,18 +9,12 @@ jobs:
     strategy:
       matrix:
         include:
-          - build-dir: 'common-gradle-enterprise-gradle-configuration'
-            sample-file: '../build-data-capturing-gradle-samples/capture-dependency-resolution/gradle-dependency-resolution.gradle'
-          - build-dir: 'common-gradle-enterprise-gradle-configuration'
-            sample-file: '../build-data-capturing-gradle-samples/capture-git-diffs/gradle-git-diffs.gradle'
-          - build-dir: 'common-gradle-enterprise-gradle-configuration'
-            sample-file: '../build-data-capturing-gradle-samples/capture-os-processes/gradle-os-processes.gradle'
-          - build-dir: 'common-gradle-enterprise-gradle-configuration'
-            sample-file: '../build-data-capturing-gradle-samples/capture-quality-check-issues/gradle-quality-check-issues.gradle'
-          - build-dir: 'common-gradle-enterprise-gradle-configuration'
-            sample-file: '../build-data-capturing-gradle-samples/capture-slow-workunit-executions/gradle-slow-task-executions.gradle'
-          - build-dir: 'common-gradle-enterprise-gradle-configuration'
-            sample-file: '../build-data-capturing-gradle-samples/capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle'
+          - sample-file: '../build-data-capturing-gradle-samples/capture-dependency-resolution/gradle-dependency-resolution.gradle'
+          - sample-file: '../build-data-capturing-gradle-samples/capture-git-diffs/gradle-git-diffs.gradle'
+          - sample-file: '../build-data-capturing-gradle-samples/capture-os-processes/gradle-os-processes.gradle'
+          - sample-file: '../build-data-capturing-gradle-samples/capture-quality-check-issues/gradle-quality-check-issues.gradle'
+          - sample-file: '../build-data-capturing-gradle-samples/capture-slow-workunit-executions/gradle-slow-task-executions.gradle'
+          - sample-file: '../build-data-capturing-gradle-samples/capture-test-execution-system-properties/gradle-test-execution-system-properties.gradle'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -35,11 +29,11 @@ jobs:
           echo -e "pluginManagement {\n
                       includeBuild \"../common-custom-user-data-gradle-plugin\"\n
                    }\n
-                   $(cat ${{matrix.build-dir}}/settings.gradle)" > ${{matrix.build-dir}}/settings.gradle
+                   $(cat common-gradle-enterprise-gradle-configuration/settings.gradle)" > common-gradle-enterprise-gradle-configuration/settings.gradle
           # apply sample file
-          echo "apply from: file(\"${{matrix.sample-file}}\")" >> ${{matrix.build-dir}}/build.gradle
+          echo "apply from: file(\"${{matrix.sample-file}}\")" >> common-gradle-enterprise-gradle-configuration/build.gradle
       - name: Run Gradle build
         uses: gradle/gradle-build-action@v2
         with:
             arguments: tasks
-            build-root-directory: ${{matrix.build-dir}}
+            build-root-directory: 'common-gradle-enterprise-gradle-configuration'
