--- a/build-data-capturing-gradle-samples/capture-ge-plugin-version/gradle-ge-plugin-version.gradle
+++ b/build-data-capturing-gradle-samples/capture-ge-plugin-version/gradle-ge-plugin-version.gradle
@@ -1,5 +1,5 @@
 /**
- * This Groovy script captures the Gradle Enterprise Maven Extension version as a custom value.
+ * This Groovy script captures the Gradle Enterprise Gradle plugin version as a custom value.
  *
  * <code> apply from: file('gradle-ge-plugin-version.gradle') </code>
  */
