Use new DSL to capture task inputs

--- a/common-gradle-enterprise-gradle-configuration/settings.gradle
+++ b/common-gradle-enterprise-gradle-configuration/settings.gradle
@@ -10,7 +10,7 @@ gradleEnterprise {
     allowUntrustedServer = false // ensure a trusted certificate is configured
 
     buildScan {
-        captureTaskInputFiles = true
+        capture { taskInputFiles = true }
         uploadInBackground = !isCI
         publishAlways()
     }
