Rename proc_translated tag to M1-translated

--- a/build-data-capturing-gradle-samples/capture-processor-arch/gradle-processor-arch.gradle
+++ b/build-data-capturing-gradle-samples/capture-processor-arch/gradle-processor-arch.gradle
@@ -29,7 +29,7 @@ static void captureProcessorArch(def api) {
       api.tag("M1")
     }
     if (isTranslatedByRosetta()) {
-      api.tag("proc_translated")
+      api.tag("M1-translated")
     }
   }
 }
