--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -15,6 +15,8 @@ jobs:
             sample-file: 'capture-git-diffs/gradle-git-diffs.gradle'
           - name: 'OS processes'
             sample-file: 'capture-os-processes/gradle-os-processes.gradle'
+          - name: 'Processor arch'
+            sample-file: 'capture-processor-arch/gradle-processor-arch.gradle'
           - name: 'Quality checks'
             sample-file: 'capture-quality-check-issues/gradle-quality-check-issues.gradle'
           - name: 'Slow tasks'
