CR follow up: if else for M1 tags

--- a/build-data-capturing-gradle-samples/capture-processor-arch/gradle-processor-arch.gradle
+++ b/build-data-capturing-gradle-samples/capture-processor-arch/gradle-processor-arch.gradle
@@ -25,11 +25,10 @@ static void captureProcessorArch(def api) {
   api.value("os.arch", osArch)
 
   if (isDarwin(osName)) {
-    if (isM1()) {
-      api.tag("M1")
-    }
     if (isTranslatedByRosetta()) {
       api.tag("M1-translated")
+    } else if (isM1()) {
+      api.tag("M1")
     }
   }
 }
